# cmake_template1

./: CMakeLists.txt  README.md
extra/: pcre2_header_tester.h  version.c
src/: date.h  main.c  toolbox.c  toolbox.h
